--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "express": "^4.16.3",
     "get-twitter-bearer-token": "^1.0.0",
     "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "twitter": "^1.7.1"
+    "sequelize": "^4.38.0",
+    "twitter": "^1.7.1",
+    "underscore": "^1.9.1",
+    "winston": "^3.1.0"
   },
   "scripts": {
     "start": "node index.js"
