--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sequelize": "^4.38.0",
     "twitter": "^1.7.1",
     "underscore": "^1.9.1",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.3.2"
   },
   "scripts": {
     "start": "node index.js"
