--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
+    "node-binance-api": "^0.8.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "sequelize": "^4.38.0",
